--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-web": "^0.19.9",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "use-immer": "^0.9.0",
     "yaml": "^2.3.3"
   },
   "browser": {
