--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.30.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,7 +24,6 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "use-immer": "^0.9.0",
-    "write-yaml-file": "^5.0.0",
     "yaml": "^2.3.3"
   },
   "browser": {
