--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "use-immer": "^0.9.0",
+    "write-yaml-file": "^5.0.0",
     "yaml": "^2.3.3"
   },
   "browser": {
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/node": "20.8.8",
     "@types/react": "18.2.31",
+    "react-app-rewire-yaml": "^1.1.0",
     "typescript": "5.2.2"
   }
 }
