--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "latest",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
