--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "formidable": "^3.5.1",
+    "formik": "^2.4.5",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
