登录的时候可以创建工作空间了

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/x-data-grid": "^6.18.1",
+    "@mui/x-data-grid-generator": "^6.18.1",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "formidable": "^3.5.1",
@@ -19,12 +22,14 @@
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
     "next": "latest",
+    "next-auth": "^5.0.0-beta.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.72.6",
     "react-native-web": "^0.19.9",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "store": "^2.0.12",
     "use-immer": "^0.9.0",
     "write-yaml-file": "^5.0.0",
     "yaml": "^2.3.3"
