--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "formidable": "^3.5.1",
     "formik": "^2.4.5",
+    "framer-motion": "^10.16.16",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
@@ -31,6 +32,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "store": "^2.0.12",
+    "styled-components": "^6.1.6",
     "use-immer": "^0.9.0",
     "write-yaml-file": "^5.0.0",
     "yaml": "^2.3.3"
