--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "store": "^2.0.12",
     "styled-components": "^6.1.6",
     "use-immer": "^0.9.0",
